# fastapi_websockets

./: .gitignore  main.py  pyproject.toml
backend/: main.py
backend/src/: config.py
backend/src/api/: api.py  tags_metadata.py
backend/src/databases/: __init__.py  pg_manager.py  redis_manager.py
backend/src/enums/: user.py
backend/src/models/: __init__.py  base.py
backend/src/repositories/: notification.py
backend/src/services/: __init__.py  notification.py  user.py
backend/src/utils/: conn_manager.py  dependency_factory.py  exception_schema.py  password.py  repository.py  service.py  ws_manager.py
backend/tests/: conftest.py
backend/tests/api/: test_notifications.py  test_users.py
backend/tests/utils/: postgres_db.py
frontend/: index.html
frontend/src/: Router.jsx  api.js  main.jsx
frontend/src/constants/: api.js
frontend/src/context/: NotificationContext.jsx
frontend/src/utils/: baseWS.js
frontend/src/websockets/: notificationWS.js
migrations/: env.py
migrations/versions/: 156fd30e1227_user.py  3ba62af84ff0_datetime.py  5be6d03fb266_notification.py
src/: config.py
src/api/dependencies/: db.py  user.py
src/api/routers/: __init__.py  notification.py  user.py
src/api/websockets/: __init__.py
src/databases/: pg_manager.py
src/keys/: private_key.pem  public_key.pem
src/models/: notification.py  user.py
src/repositories/: __init__.py  user.py
src/schemas/: base_exceptions.py
src/services/: notification.py  user.py
src/types/: dependency_factory.py
src/utils/: dependency_factory.py  service.py  token.py
(+23 files in other folders)
